# toasty

./: Cargo.toml
crates/toasty/: Cargo.toml
crates/toasty-cli/: Cargo.toml
crates/toasty-cli/src/: lib.rs  migration.rs
crates/toasty-core/: Cargo.toml
crates/toasty-core/src/: error.rs  lib.rs  migrate.rs  stmt.rs
crates/toasty-core/tests/: migrate_config.rs  migrate_history_file.rs  schema_diff.rs  stmt_cast_jiff.rs  stmt_infer_db_ty.rs
crates/toasty-driver-dynamodb/src/: lib.rs  op.rs
crates/toasty-driver-integration-suite/src/: test.rs  tests.rs
crates/toasty-driver-mysql/src/: lib.rs
crates/toasty-driver-postgresql/src/: lib.rs  type.rs  value.rs
crates/toasty-driver-sqlite/src/: lib.rs
crates/toasty-macros/: Cargo.toml
crates/toasty-macros/src/: lib.rs  migrate.rs
crates/toasty-macros/src/model/expand/: embedded_enum.rs  fields.rs  query.rs  update.rs
crates/toasty-macros/src/model/schema/: model.rs
crates/toasty-sql/src/: json.rs  migration.rs  serializer.rs
crates/toasty-sql/tests/: migration_primary_key.rs  serialize_dml.rs  serialize_types.rs
crates/toasty/src/: engine.rs  lib.rs  migrate.rs  stmt.rs  update_target.rs
docs/dev/: README.md  roadmap.md
docs/dev/design/: database-generated-defaults.md  include-filters.md  postgres-interval.md  update-returning.md
examples/todo-with-cli/src/: lib.rs
examples/todo-with-cli/toasty/: history.toml
tests/: Cargo.toml  Toasty.toml
tests/fixtures/: history.toml
tests/tests/: dynamodb.rs  migrate.rs  migrate_macro.rs  mysql.rs  postgresql.rs  sqlite.rs  turso.rs
(+110 files in other folders)
