[package]
name = "toasty-macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[features]
migrate = ["dep:serde", "dep:toml"]

[dependencies]
toasty-core.workspace = true
toasty-codegen.workspace = true

proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
toml = { workspace = true, optional = true }

[lints]
workspace = true
